// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FrameComponent should render the template when the vm is not provided 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <app-frame>
    <section
      class="flex flex-col gap-y-4"
    >
      <div
        class="grid grid-cols-2"
      >
        <!--container-->
        <div
          class="flex justify-end"
        />
      </div>
      <div>
        Should be projected
      </div>
    </section>
    <!--container-->
  </app-frame>
</div>
`;

exports[`FrameComponent should render the template when the vm is provided 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <app-frame>
    <section
      class="flex flex-col gap-y-4"
    >
      <div
        class="grid grid-cols-2"
      >
        <h2>
          Our Products
        </h2>
        <!--container-->
        <div
          class="flex justify-end"
        />
      </div>
      <div>
        Should be projected
      </div>
    </section>
    <!--container-->
  </app-frame>
</div>
`;
